# QuickJS-MinGW

./: .gitignore  CMakeLists.txt  readme.md
fix-deps/: CMakeLists.txt
src/rt/: quickjs-libc.c
